# mustang

./: .gitignore  .mustang-refs.example.yaml  AGENTS.md  CLAUDE.md  INIT.md  LICENSE  README.md  pyproject.toml  resolve-ref.sh
archive/daemon/: package.json  pyproject.toml
archive/daemon/daemon/: __init__.py  __main__.py  app.py  auth.py  errors.py  lifecycle.py  side_effects.py
archive/daemon/daemon/api/: client_messages.py  health.py  permission_handler.py  question_handler.py  ws.py  ws_dispatch.py
archive/daemon/daemon/config/: __init__.py  defaults.py  loader.py  project.py  runtime_schema.py  schema.py  source_schema.py
archive/daemon/daemon/engine/: __init__.py  agents_md.py  compact.py  compact_types.py  context.py  conversation.py  memory_extract_prompt.py  memory_prompt.py  static_prompt.py  stream.py
archive/daemon/daemon/extensions/: __init__.py  health_monitor.py  hook_config_parser.py  manager.py
archive/daemon/daemon/memory/: __init__.py  access_tracker.py  index_gen.py  log.py  markdown_utils.py  paths.py  relevance.py  schema.py  store.py
archive/daemon/daemon/permissions/: __init__.py  engine.py  modes.py  policy.py  rules.py  settings.py
archive/daemon/daemon/providers/: __init__.py  anthropic.py  anthropic_format.py  base.py  bedrock.py  minimax.py  openai_base.py  openai_compatible.py  openai_format.py  registry.py  think_tag_parser.py  thinking_config.py
archive/daemon/daemon/sessions/: __init__.py  cleanup.py  entry.py  image_cache.py  manager.py  meta.py  rebuild.py  session.py  storage.py
archive/daemon/daemon/tasks/: __init__.py  shell_task.py  store.py
archive/daemon/daemon/utils/: __init__.py  git.py
src/kernel/: pyproject.toml
src/kernel/kernel/: __init__.py  __main__.py  app.py  module_table.py  plans.py  signal.py  subsystem.py
src/kernel/kernel/commands/: __init__.py  registry.py  types.py
src/kernel/kernel/config/: __init__.py  loader.py  manager.py  section.py
src/kernel/kernel/connection_auth/: __init__.py  _fs.py  connection_authenticator.py  context.py  password.py  token.py
src/kernel/kernel/flags/: __init__.py  kernel_flags.py  manager.py
src/kernel/kernel/gateways/: __init__.py  base.py  manager.py
src/kernel/kernel/git/: __init__.py  context.py  store.py  types.py  worktree.py
src/kernel/kernel/hooks/: __init__.py  config.py  eligibility.py  loader.py  manifest.py  registry.py  types.py
src/probe/: pyproject.toml
src/probe/probe/: __init__.py  __main__.py  client.py  repl.py
(+1177 files in other folders)
