[project]
name = "mustang-probe"
version = "0.1.0"
description = "ACP test client for mustang-kernel"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["probe"]

[project.scripts]
probe = "probe.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.8",
]

